# algorand-aas

./: .env.example  .env.mkdemo.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PLAN.md  QUICKSTART.md  README.md  aas_arc32_spec.json  pyproject.toml
aas/: __init__.py
aas/cli/: __init__.py  ai_commands.py  config.py  did_commands.py  main.py  vc_commands.py
aas/cli/schemas/: ai_inference_v1.json
aas/contracts/: __init__.py  aas.py
aas/scripts/: __init__.py  deploy.py  generate_spec.py
aas/sdk/: __init__.py  aas.py  ai_vc_integration.py  did.py  hashing.py  models.py  vc.py  vc_aas_integration.py
artifacts/: application.json  contract.json
docs/: DEMO.md  DEMO_CLI.md  demo.html
examples/selfrun_gemma270m/: claim.json  holder.did  holder.key.json  issuer.did  issuer.key.json  output.txt  params.json  prompt.txt  vc.jwt
scripts/: cli_smoke.sh  compute_schema_id.py  deploy_app.py  derive_address.py  fund_app.py  generate_attester.py  kmd_mnemonic.py  lmstudio_example.sh  lmstudio_run.sh  read_box.py  run_llm.py  run_llm.sh  sign_attestation.py
tests/: __init__.py  helpers.py  helpers_async.py  test_ai_vc_provenance.py  test_cli_commands.py  test_cli_did.py  test_cli_vc.py  test_contract_compile.py  test_did_key.py  test_example_selfrun.py  test_flow_localnet.py  test_sdk_client.py  test_sdk_hashing.py  test_vc_aas_integration.py  test_vc_jwt.py
