[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aas"]

[project]
name = "algorand-aas"
version = "0.1.0"
description = "Algorand Attestation Service - Schema Registry + Attestation Writer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "algokit>=2.8.0",
    "beaker-pyteal",
    "pyteal",
    "algosdk",
    "pynacl",
    "typer",
    "pydantic>=2.0",
    "pydantic-settings",
    "rich",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "pre-commit"]

[project.scripts]
aas = "aas.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "localnet: marks tests as requiring AlgoKit LocalNet (deselect with '-m \"not localnet\"')",
]
filterwarnings = ["ignore:pkg_resources is deprecated.*:UserWarning"]

[tool.mypy]
exclude = ["worktrees/"]

[tool.ruff]
exclude = ["worktrees/"]
